test/output/err/std_compile_vector_it_assign_err.cpp.err
src/vector/it_assign_err.cpp:18:9: error: cannot assign to return value because function 'operator[]' returns a const value
        ite[1] = 42; // < -- error
        ~~~~~~ ^
src/vector/it_assign_err.cpp:24:2: note: in instantiation of function template specialization 'test<std::vector<int, std::allocator<int> > >' requested here
        test<NAMESPACE::vector<int> >();        
        ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_iterator.h:847:7: note: function 'operator[]' which returns const-qualified type '__gnu_cxx::__normal_iterator<const int *, std::vector<int, std::allocator<int> > >::reference' (aka 'const int &') declared here
      reference
      ^~~~~~~~~
1 error generated.
